--- a/Imc&Diet/Base.lproj/Main.storyboard
+++ b/Imc&Diet/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Programme-->
+        <!--Title-->
         <scene sceneID="8n3-mh-Iu3">
             <objects>
                 <viewController id="Yn6-eJ-Mj4" sceneMemberID="viewController">
@@ -31,15 +31,70 @@
                                 <color key="shadowColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <size key="shadowOffset" width="5" height="-1"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pcn-VI-DIa">
+                                <rect key="frame" x="20" y="310" width="374" height="526"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <mutableString key="text">La pratique d’une activité sportive entraînera une perte de poids à condition d’être combinée à une diminution et à une modification des apports alimentaires. En effet, lors d’un effort physique, les calories brûlées proviennent principalement des lipides qui sont à l’origine de l’énergie nécessaire à cet effort. Pour perdre du poids, il faut donc limiter l’apport alimentaire en lipides afin que l’organisme puise directement dans les graisses stockées pour produire de l’énergie. Idéalement, le patient devrait s’adonner à 150 minutes de sport d’intensité «modérée» par semaine. Le nordic walking ou l’aquagym sont également recommandés car ces exercices prolongés offrent aussi l’avantage d’un travail en groupe, ce qui est plus motivant pour le patient. D’autres sports sont également envisageables, l’essentiel étant d’adapter la fréquence et la durée de l’activité en fonction de l’intensité à l’effort ressentie par le patient afin de maintenir sa motivation.</mutableString>
+                                <color key="textColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <viewLayoutGuide key="safeArea" id="316-Io-pU8"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Programme" id="gMT-qN-j7x"/>
+                    <navigationItem key="navigationItem" title="Title" id="96D-uM-rWA"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PL2-Fl-Wwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1507.2463768115942" y="87.723214285714278"/>
+            <point key="canvasLocation" x="-120.28985507246378" y="172.76785714285714"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="6Dw-Cq-PZI">
+            <objects>
+                <tableViewController id="Bfg-En-25w" customClass="HistoriqueTableViewController" customModule="Imc_Diet" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lvf-LS-PiS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historique" textLabel="uvQ-VC-gH6" detailTextLabel="VxF-he-7Cr" style="IBUITableViewCellStyleValue1" id="Pie-9w-6nl">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pie-9w-6nl" id="MpP-Gv-qWz">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uvQ-VC-gH6">
+                                            <rect key="frame" x="20" y="12" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VxF-he-7Cr">
+                                            <rect key="frame" x="350" y="12" width="44" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Bfg-En-25w" id="bkK-Zn-tfl"/>
+                            <outlet property="delegate" destination="Bfg-En-25w" id="3g6-Hg-wdk"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="Kyd-xF-ryQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PHR-ds-MBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1475" y="153"/>
         </scene>
         <!--Imc-->
         <scene sceneID="IeJ-h0-DpY">
@@ -57,7 +112,7 @@
                                 <rect key="frame" x="98" y="471" width="302" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textField>
@@ -65,7 +120,7 @@
                                 <rect key="frame" x="98" y="377" width="302" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -73,7 +128,7 @@
                                 <rect key="frame" x="98" y="589" width="302" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                <color key="textColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -122,7 +177,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <viewLayoutGuide key="safeArea" id="ied-ni-ju1"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Imc" id="RHx-0t-ODD">
+                    <tabBarItem key="tabBarItem" title="Imc" image="calculator" id="RHx-0t-ODD">
                         <color key="badgeColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBarItem>
                     <connections>
@@ -149,6 +204,11 @@
                                 <rect key="frame" x="-10" y="14" width="435" height="286"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LJz-e7-b3L">
+                                <rect key="frame" x="90" y="407" width="235" height="371"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="neA-Wy-m0r">
                                 <rect key="frame" x="0.0" y="330" width="414" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -156,16 +216,41 @@
                                 <color key="textColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LJz-e7-b3L">
-                                <rect key="frame" x="90" y="429" width="235" height="390"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qby-vV-wwU">
+                                <rect key="frame" x="20" y="814" width="182" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.37285552189999999" blue="0.50829406610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <size key="titleShadowOffset" width="1" height="0.0"/>
+                                <state key="normal" title="Nouveau calcul">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="6kO-lH-yhN" kind="show" id="vCi-K7-2G8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlc-dI-Ijl">
+                                <rect key="frame" x="212" y="814" width="182" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </imageView>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <size key="titleShadowOffset" width="1" height="0.0"/>
+                                <state key="normal" title="Votre programme">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Yn6-eJ-Mj4" kind="show" id="XW4-Hj-S5R"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <viewLayoutGuide key="safeArea" id="IEo-aY-Zpk"/>
                     </view>
                     <connections>
+                        <outlet property="bntProgram" destination="Vlc-dI-Ijl" id="Mvv-ec-VIi"/>
+                        <outlet property="bntReturn" destination="qby-vV-wwU" id="uKW-nG-nnb"/>
                         <outlet property="imgReponse" destination="LJz-e7-b3L" id="smS-2V-LuP"/>
                         <outlet property="reponseLabel" destination="neA-Wy-m0r" id="hBb-nh-BvI"/>
                     </connections>
@@ -186,7 +271,7 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="0Ip-jj-C7Z"/>
                         <segue destination="6kO-lH-yhN" kind="relationship" relationship="viewControllers" id="TJf-9f-PkW"/>
-                        <segue destination="Yn6-eJ-Mj4" kind="relationship" relationship="viewControllers" id="F9g-K9-hbt"/>
+                        <segue destination="Bfg-En-25w" kind="relationship" relationship="viewControllers" id="tfo-bh-l9N"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WbY-CO-bpb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -218,7 +303,9 @@
                         <color key="backgroundColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Accueil" id="nf4-at-Zep"/>
+                    <tabBarItem key="tabBarItem" title="Accueil" image="home-2" id="nf4-at-Zep">
+                        <color key="badgeColor" red="0.38855133889999999" green="0.44183883569999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -226,6 +313,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="calculator" width="18.399999618530273" height="18.399999618530273"/>
+        <image name="home-2" width="18" height="18"/>
         <image name="hourglass" width="512" height="512"/>
         <image name="images-3" width="361" height="140"/>
         <image name="img-diet" width="500" height="250"/>
@@ -234,4 +323,7 @@
         <image name="ruler" width="542.11767578125" height="542.11767578125"/>
         <image name="weight" width="512" height="512"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="TJf-9f-PkW"/>
+    </inferredMetricsTieBreakers>
 </document>
